--- a/model/python_model.ipynb
+++ b/model/python_model.ipynb
@@ -208,8 +208,8 @@
     "\n",
     "def model_performance(y_pred, y_true, y_est, y_train):\n",
     "    \n",
-    "    print(\"mean_absolute_error:\", mean_absolute_error(y_true, y_pred))\n",
-    "    print(\"rmse:\", sqrt(mean_squared_error(y_true, y_pred)))\n",
+    "    print(\"training rsme:\", sqrt(mean_squared_error(y_train, y_est)))\n",
+    "    print(\"testing rmse:\", sqrt(mean_squared_error(y_true, y_pred)))\n",
     "    print(\"training r2 score:\", r2_score(y_train, y_est))\n",
     "    print(\"testing r2 score:\", r2_score(y_true, y_pred))"
    ]
@@ -224,8 +224,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean_absolute_error: 3.9446922726663685\n",
-      "rmse: 5.046166946542161\n",
+      "training rsme: 5.479893732098216\n",
+      "testing rmse: 5.046166946542161\n",
       "training r2 score: 0.4445394257402022\n",
       "testing r2 score: 0.5154455024411131\n"
      ]
@@ -251,8 +251,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean_absolute_error: 2.8072926896921753\n",
-      "rmse: 4.372026807811751\n",
+      "training rsme: 4.2353918914216475\n",
+      "testing rmse: 4.372026807811751\n",
       "training r2 score: 0.6681848834871332\n",
       "testing r2 score: 0.6362650504328229\n"
      ]
@@ -435,8 +435,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean_absolute_error: 3.0314022648394063\n",
-      "rmse: 4.356762595015797\n",
+      "training rsme: 4.4722354493625796\n",
+      "testing rmse: 4.356762595015797\n",
       "training r2 score: 0.6300370062353107\n",
       "testing r2 score: 0.6388004582629603\n"
      ]
@@ -477,6 +477,27 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "5b80190c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.49107562754811"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf2.intercept_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "b10b9389",
    "metadata": {},
    "outputs": [
@@ -484,8 +505,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean_absolute_error: 3.1577453217107085\n",
-      "rmse: 4.442865371831435\n",
+      "training rsme: 4.594039267391938\n",
+      "testing rmse: 4.442865371831435\n",
       "training r2 score: 0.6096102812469202\n",
       "testing r2 score: 0.6243825961132723\n"
      ]
@@ -511,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a9e79ea0",
    "metadata": {},
    "outputs": [
@@ -531,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "6e145579",
    "metadata": {},
    "outputs": [
@@ -541,7 +562,7 @@
        "Text(0, 0.5, 'e_(t+1)')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -571,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "3facd171",
    "metadata": {
     "scrolled": true
@@ -607,7 +628,7 @@
        " (4.2458717989292865, 0.2361727320102295, 0.9418107037680797))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -631,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "8faf52d8",
    "metadata": {},
    "outputs": [
@@ -675,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "e165bd32",
    "metadata": {},
    "outputs": [
@@ -755,7 +776,7 @@
        "4  0.619258    34.7  35.319258   169"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "765d4577",
    "metadata": {},
    "outputs": [
@@ -933,7 +954,7 @@
        "4    100.0  101.9   63.2  42.2   24.0    32.2     27.7   17.7  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "33c85daf",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1182,7 @@
        "21    33.8     30.3   17.2  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
